# waken-wa-reporter

./: .gitignore  LICENSE  README.md  go.mod  go.sum  index.html  main.go  package-lock.json  package.json
.github/workflows/: build.yml  reporter-go.yml  tauri-release.yml
internal/activity/: client.go  client_test.go  http_client.go  metadata_merge.go  metadata_merge_test.go  types.go
internal/background/: spawn_unix.go  spawn_windows.go
internal/cliutil/: approval_banner.go
internal/config/: file.go  resolve.go  types.go
internal/openurl/: openurl.go
internal/platform/darwin/: frontmost.go  frontmost_nocgo.go
internal/platform/foreground/: snapshot_darwin.go  snapshot_darwin_test.go  snapshot_windows.go  snapshot_windows_test.go
internal/platform/media/: info.go  info_test.go  nowplaying_darwin.go  nowplaying_darwin_nocgo.go  nowplaying_darwin_test.go  nowplaying_stub.go  nowplaying_stub_test.go  nowplaying_windows.go  nowplaying_windows_powershell.go  nowplaying_windows_powershell_shared.go  nowplaying_windows_test.go
internal/platform/power/: is_charging.go  is_charging_darwin.go  is_charging_darwin_nocgo.go  is_charging_windows.go
mobile/android/autojs/: waken-wa-activity.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/reporter/: activity.rs  config.rs  foreground.rs  media.rs  mod.rs  power.rs  state.rs
src/components/: Dashboard.tsx  Settings.tsx
